--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,20 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.11",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.533.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-router-dom": "^7.7.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
+		"@types/node": "^24.1.0",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.5.2",
@@ -26,6 +33,7 @@
 		"globals": "^16.2.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.6.13",
+		"tw-animate-css": "^1.3.6",
 		"vite": "^7.0.0"
 	}
 }
