--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "previlace-server",
-  "version": "1.0.0",
-  "description": "Previlace Backend API",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-session": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+	"name": "previlace-server",
+	"version": "2.0.0",
+	"description": "Previlace Backend API with Enhanced Authentication",
+	"main": "server.js",
+	"type": "module",
+	"scripts": {
+		"start": "nodemon server.js",
+		"dev": "nodemon server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"dependencies": {
+		"axios": "^1.11.0",
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"express-mongo-sanitize": "^2.2.0",
+		"helmet": "^8.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.0.3",
+		"passport": "^0.7.0",
+		"passport-google-oauth20": "^2.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10"
+	},
+	"keywords": [
+		"nodejs",
+		"express",
+		"mongodb",
+		"authentication",
+		"jwt",
+		"oauth",
+		"api"
+	],
+	"author": "Previlace Team",
+	"license": "MIT"
 }
