--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
 	"scripts": {
 		"start": "nodemon server.js",
 		"dev": "nodemon server.js",
+		"prod": "node server.js",
+		"db:check": "node -e \"import('./src/utils/MongoHelper.js').then(m => console.log(m.default.generateStartupInstructions()))\"",
+		"health": "curl -s http://localhost:8080/api/health | node -p 'JSON.parse(require(\"fs\").readFileSync(0, \"utf8\")).database.status'",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
