--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"katex": "^0.16.9",
 		"lucide-react": "^0.533.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-katex": "^3.0.1",
+		"react-router-dom": "^7.1.1",
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^3.3.1",
 		"zustand": "^5.0.3"
