--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "previlace",
   "version": "1.0.0",
   "private": true,
-  "description": "Civilearn: AI-Enhanced Civil Service Review System",
+  "description": "Previlace: AI-Enhanced Civil Service Review System",
   "scripts": {
     "dev": "cd client && pnpm start",
     "dev:client": "cd client && pnpm start",
