--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
 		"prod": "node server.js",
 		"db:check": "node -e \"import('./src/utils/MongoHelper.js').then(m => console.log(m.default.generateStartupInstructions()))\"",
 		"health": "curl -s http://localhost:5000/api/health | node -p 'JSON.parse(require(\"fs\").readFileSync(0, \"utf8\")).database.status'",
-		"seed:admin": "node src/seeders/adminSeeder.js",
+		"seed:admin": "node src/scripts/adminSeed.js",
+		"db:seed:admin": "node src/scripts/adminSeed.js",
+		"db:seed": "node src/scripts/seed.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
@@ -30,6 +32,8 @@
 		"socket.io": "^4.8.1"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^10.1.0",
+		"chalk": "^5.6.2",
 		"nodemon": "^3.1.10"
 	},
 	"keywords": [
