--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
 		"mongoose": "^8.0.3",
 		"passport": "^0.7.0",
 		"passport-google-oauth20": "^2.0.0",
-		"socket.io": "^4.8.1"
+		"socket.io": "^4.8.1",
+		"pdfkit": "^0.15.0"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^10.1.0",
