--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
 		"prod": "node server.js",
 		"db:check": "node -e \"import('./src/utils/MongoHelper.js').then(m => console.log(m.default.generateStartupInstructions()))\"",
 		"health": "curl -s http://localhost:5000/api/health | node -p 'JSON.parse(require(\"fs\").readFileSync(0, \"utf8\")).database.status'",
-		"seed": "node src/scripts/seed.js",
-    "seed:comprehensive": "node src/scripts/seed_comprehensive.js",
-    "seed:admin": "node src/scripts/adminSeed.js",
-		"db:seed:admin": "node src/scripts/adminSeed.js",
-		"db:seed": "node src/scripts/seed.js",
+		"seed": "node src/scripts/seed_master.js",
+		"seed:core": "node -e 'import(\"./src/scripts/seed_core.js\").then(m => m.seedCore().then(() => process.exit(0)))'",
+		"seed:users": "node -e 'import(\"./src/scripts/seed_users.js\").then(m => m.seedUsers().then(() => process.exit(0)))'",
+		"seed:questions": "node -e 'import(\"./src/scripts/seed_questions.js\").then(async m => { await import(\"./src/config/database.js\").then(d => d.default()); const s = await import(\"./src/models/Subject.js\").then(m=>m.default.find({})); const t = await import(\"./src/models/Topic.js\").then(m=>m.default.find({})); await m.seedQuestions(s, t); process.exit(0); })'",
+		"seed:schedule": "node -e 'import(\"./src/scripts/seed_schedule.js\").then(async m => { await import(\"./src/config/database.js\").then(d => d.default()); const s = await import(\"./src/models/Subject.js\").then(m=>m.default.find({})); const t = await import(\"./src/models/Topic.js\").then(m=>m.default.find({})); await m.seedWeekendClasses(s, t); process.exit(0); })'",
+		"seed:profiles": "node -e 'console.log(\"Use seed:master for profiles as it requires complex dependencies\")'",
+		"db:seed": "node src/scripts/seed_master.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
@@ -22,6 +24,7 @@
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-mongo-sanitize": "^2.2.0",
