refactor: replace Resume Builder with CV Builder and update Admin/Seeding logic
- Refactored `CVPage.jsx` to implement the new CV Builder functionality.
- Deleted legacy `ResumePage.jsx`.
- Updated `Sidebar.jsx` and `authService.js` to reflect CV Builder changes.
- Enhanced `AdminRegistrationPage.jsx` and `UserManagement.jsx` for better admin controls.
- Added backend scripts for seeding and debugging registrations (`seed_registrations.js`, `check_registrations.js`).
- Updated backend controllers (`registrationController`, `userManagementController`, `seedController`) to support new features.
- Added utility scripts (`check_db.js`, `test_connect.js`) for database verification.

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"seed:questions": "node -e 'import(\"./src/scripts/seed_questions.js\").then(async m => { await import(\"./src/config/database.js\").then(d => d.default()); const s = await import(\"./src/models/Subject.js\").then(m=>m.default.find({})); const t = await import(\"./src/models/Topic.js\").then(m=>m.default.find({})); await m.seedQuestions(s, t); process.exit(0); })'",
 		"seed:schedule": "node -e 'import(\"./src/scripts/seed_schedule.js\").then(async m => { await import(\"./src/config/database.js\").then(d => d.default()); const s = await import(\"./src/models/Subject.js\").then(m=>m.default.find({})); const t = await import(\"./src/models/Topic.js\").then(m=>m.default.find({})); await m.seedWeekendClasses(s, t); process.exit(0); })'",
 		"seed:profiles": "node -e 'console.log(\"Use seed:master for profiles as it requires complex dependencies\")'",
+		"seed:registrations": "node src/scripts/seed_registrations.js",
 		"db:seed": "node src/scripts/seed_master.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
