--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
 		"katex": "^0.16.9",
 		"lucide-react": "^0.533.0",
 		"react": "^19.1.0",
+		"react-day-picker": "^9.11.2",
 		"react-dom": "^19.1.0",
 		"react-katex": "^3.0.1",
 		"react-router-dom": "^7.1.1",
